assets/css/default.css
/* ... */
/*
 * Common attributes
 */
@font-face {
	font-family: "ocr-a";
	src: url("../fonts/OCR-A.ttf");
	src: url("../fonts/OCR-A.woff") format("woff"),url("../fonts/OCR-A.ttf") format("tff");
	font-weight: normal;
	font-style: normal
}

::-moz-scrollbar-thumb:hover {
	border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
	border-radius: 5px;
}

::-scrollbar-thumb:hover {
	border-radius: 5px;
}

html,
body {
  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica,
    Arial, sans-serif;
}

html {
  background-image: linear-gradient(0deg, transparent, transparent, rgba(47,121,160,1), rgba(47,121,160,1)) !important;
  background-color: #03060b;
  color: #f0f0f0;
  background-size: cover !important;
  background-repeat: no-repeat !important;
  background-attachment: fixed !important;
  height: 100vh !important;
  font-size: 10pt;
  text-shadow: 0.2em 0.2em 0.5em rgb(0 0 0 / 75%), 0 0 0.2em #000000;
  overflow: hidden;
}

body {
  height: max-content;
  overflow-y: auto;
  background: unset !important;
}

#contents {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  padding-top: 9em;
}

.h-box {
  padding-left: 1em;
  padding-right: 1em;
}

.v-box {
  padding-top: 1em;
  padding-bottom: 1em;
}

.deleted {
  background-color: rgb(255, 0, 0, 0.5);
}

.underlined {
  border-bottom: 1px solid;
  margin-bottom: 20px;
}

.title {
  margin: 0.5em 0 1em 0;
}

/* A flex container */
.flexible {
  display: flex;
  align-items: center;
}

.flex-left {
  display: flex;
  flex: 1 1 auto;
  flex-flow: row wrap;
  justify-content: flex-start;
  width: 38vw;
}

.flex-right {
  display: flex;
  flex: 2 0 auto;
  flex-flow: row nowrap;
  justify-content: flex-end;
  width: auto !important;
}

/*
 * Channel page
 */

.channel-profile > * {
  font-size: 1.17em;
  font-weight: bold;
  vertical-align: middle;
  border-radius: 50%;
}

.channel-profile > img {
	width: 82px;
	height: auto;
}

body a.channel-owner {
  background-color: #008bec;
  color: #fff;
  border-radius: 9px;
  padding: 1px 6px;
}

.creator-heart-container {
  display: inline-block;
  padding: 0px 7px 6px 0px;
  margin: 0px -7px -4px 0px;
}

.creator-heart {
  display: inline-block;
  position: relative;
  width: 16px;
  height: 16px;
  border: 2px none;
}

.creator-heart-background-hearted {
  width: 16px;
  height: 16px;
  padding: 0px;
  position: relative;
}

.creator-heart-small-hearted {
  position: absolute;
  right: -7px;
  bottom: -4px;
}

.creator-heart-small-container {
  display: block;
  position: relative;
  width: 13px;
  height: 13px;
  color: rgb(255, 0, 0);
}

.feed-menu {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.feed-menu-item {
  text-align: center;
}

@media screen and (max-width: 640px) {
  .feed-menu-item {
    flex: 0 0 40%;
  }
}

div {
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.loading {
  display: inline-block;
  animation: spin 2s linear infinite;
}

#playlist {
  height: 100vh !important;
}

.playlist-restricted {
  padding-right: 10px;
}

#playlist ~ .h-box {
  display: none !important;
  height: 0px !important;
}


/*
 * Buttons
 */

.pure-button, button {
  color: #000000 !important;
  text-decoration: none !important;
  text-shadow: none;
  box-shadow: 0.3em 0.3em 0.5em rgba(0,0,0,0.6);
}

:is(.pure-button, button):is(:hover,:active,:focus) {
  text-decoration: none !important;
  text-shadow: none;
}

button.pure-button-primary,
body a.pure-button-primary,
.channel-owner:hover,
.channel-owner:focus {
  background-color: #a0a0a0;
  color: rgba(35, 35, 35, 1);
  text-shadow: none;
}

.pure-button-primary,
.pure-button-secondary {
  border: 1px solid #a0a0a0;
  border-radius: 3px;
  margin: 0 .4em;
}

.pure-button-secondary.low-profile {
  padding: 5px 10px;
  margin: 0;
}

/* Has to be combined with flex-left/right */
.button-container {
  flex-flow: wrap;
  gap: 0.5em 0.75em;
}


/*
 * Video thumbnails
 */

div.thumbnail {
  position: relative;
  width: 100%;
  box-sizing: border-box;
}

img.thumbnail {
  display: block;
  width: 100%;
  object-fit: cover;
  border-radius: 9px;
  box-shadow: 0.3em 0.3em 0.5em rgba(0,0,0,0.8);
  border: solid 0.75px rgba(32,32,32,0.5);
}

img.thumbnail:is(:hover, :active, :focus) {
	border: solid 1.5px rgba(230,230,230,0.5) !important;
}

.thumbnail-placeholder {
  min-height: 50px;
  border: 2px dotted;
}

div.watched-overlay {
  z-index: 50;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(255,255,255,.4);
}

div.watched-indicator {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 4px;
  width: 100%;
  background-color: red;
}

div.thumbnail > .top-left-overlay,
div.thumbnail > .bottom-right-overlay {
  z-index: 100;
  position: absolute;
  padding: 0;
  margin: 0;
  font-size: 1.6em;
}

.top-left-overlay { top: 0.6em; left: 0.6em; }
.bottom-right-overlay { bottom: 0.6em; right: 0.6em; }

.length {
	padding: 0.35em;
	margin: -0.3em 0px;
	color: #fff !important;
	border-radius: 3px;
	width: fit-content;
	box-shadow: 0.3em 0.3em 0.5em rgba(0,0,0,0.8);
	font-size: .8rem !important;
	background-color: rgba(0,0,0,0.65) !important;
}

.length, .top-left-overlay button {
  color: #eee;
  background-color: rgba(35, 35, 35, 0.85) !important;
}


/*
 * Navbar
 */

.navbar {
  margin: 1em 0;
  display: flex; /* this is also defined in framework, but in case of future changes */
  align-items: center;
  justify-content: space-between;
}

.navbar > div {
  flex: 1;
}

.searchbar {
  flex-grow: 2; /* take double the space of the other items */
}

.navbar a {
  padding: 0; /* this way it will stay aligned with content under */
}

.navbar .index-link {
  font-weight: bold;
  display: inline;
  color: transparent !important;
  text-shadow: none;
}


a.feed-menu-item.pure-menu-heading {
	display: none !important;
}
/* ... */

